--- a/PTP/app/static/app/content/bootstrap.css
+++ b/PTP/app/static/app/content/bootstrap.css
@@ -757,10 +757,12 @@ pre code {
 }
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+  padding-right: 5px;
+  padding-left: 5px;
+  width: 100%;
+  height: 100%
+  /*margin-right: auto;
+  margin-left: auto;*/
 }
 
 .container:before,
@@ -926,7 +928,7 @@ pre code {
 
 @media (min-width: 768px) {
   .container {
-    max-width: 750px;
+    max-width: 100%;
   }
   .col-sm-1,
   .col-sm-2,
@@ -1080,7 +1082,7 @@ pre code {
 
 @media (min-width: 992px) {
   .container {
-    max-width: 970px;
+    max-width: 100%;
   }
   .col-md-1,
   .col-md-2,
@@ -1243,7 +1245,7 @@ pre code {
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1170px;
+    max-width: 100%;
   }
   .col-lg-1,
   .col-lg-2,
@@ -5214,7 +5216,7 @@ a.thumbnail:focus {
 .media,
 .media-body {
   overflow: hidden;
-  zoom: 1;
+  /*zoom: 1;*/
 }
 
 .media,
