--- a/PTP/app/templates/app/index.html
+++ b/PTP/app/templates/app/index.html
@@ -8,7 +8,7 @@
     <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
 
-<div class="row">
+<div class="row" style="padding-left: 2px;">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
