--- a/PTP/app/templates/app/layout.html
+++ b/PTP/app/templates/app/layout.html
@@ -14,39 +14,40 @@
     <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script> 
     <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script> 
 
+    <!-- Scrollbar Custom CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
+
 </head>
 
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="/" class="navbar-brand">Application name</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'contact' %}">Contact</a></li>
-                    <!--Added the IDE page. See views.py & urls.py KP-->
-                    <li><a href="{% url 'IDE' %}">IDE</a></li>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/" class="navbar-brand">Application name</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'about' %}">About</a></li>
+                <li><a href="{% url 'contact' %}">Contact</a></li>
+                <!--Added the IDE page. See views.py & urls.py KP-->
+                <li><a href="{% url 'IDE' %}">IDE</a></li>
                     
-                </ul>              
-                {% include 'app/loginpartial.html' %}
-            </div>
+            </ul>              
+            {% include 'app/loginpartial.html' %}
         </div>
     </div>
 
-    <div class="container body-content">
+    <div>
 {% block content %}{% endblock %}
         <hr/>
-        <footer>
+        <!--<footer>
             <p>&copy; {{ year }} - My Django Application</p>
-        </footer>
+        </footer>-->
     </div>
 
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
