--- a/PTP/app/templates/app/index.html
+++ b/PTP/app/templates/app/index.html
@@ -3,9 +3,15 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Django</h1>
-    <p class="lead">Django is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>Learn Python Platform</h1>
+    <p style="font-size: 24px;">An automated level 1 college programming course</p>
+    <ul>
+    <li><p>Course material is Free: "How to Automate the Boring Stuff".</p></li>
+    <li><p>Automated Grading</p></li>
+    <li><p>ACM based SLOs</p></li>
+    </ul>
+
+    <!--<p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>-->
 </div>
 
 <div class="row" style="padding-left: 2px;">
@@ -19,12 +25,12 @@
         <p><a class="btn btn-default" href="https://djangobook.com/django-tutorials/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
+        <h2>How it Works</h2>
         <p>The Python Package Index is a repository of software for the Python programming language.</p>
         <p><a class="btn btn-default" href="https://pypi.org/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Microsoft Azure</h2>
+        <h2>Course Structure</h2>
         <p>You can easily publish to Microsoft Azure using Visual Studio. Find out how you can host your application using a free trial today.</p>
         <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
     </div>
