--- a/PTP/app/static/app/content/site.css
+++ b/PTP/app/static/app/content/site.css
@@ -231,7 +231,7 @@ a:focus {
     }
 
     #sidebar .sidebar-header {
-        padding: 20px;
+        padding-top: 32px;
         background: #6d7fcc;
     }
 
