--- a/PTP/app/templates/app/layout.html
+++ b/PTP/app/templates/app/layout.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - My Django Application</title>
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
+    <!--<link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />-->
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.css' %}" />
+    <!--<link rel="stylesheet" type="text/css"href="{% static 'app/content/bootstrap.css' %}?03292020"-->
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
@@ -30,15 +32,17 @@
             <a href="/" class="navbar-brand">Application name</a>
         </div>
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="{% url 'home' %}">Home</a></li>
+            <ul class="nav navbar-nav navbar-right">
+                <!--<li><a href="{% url 'home' %}">Home</a></li>-->
                 <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="{% url 'contact' %}">Contact</a></li>
-                <!--Added the IDE page. See views.py & urls.py KP-->
-                <li><a href="{% url 'IDE' %}">IDE</a></li>
+                <!--<li><a href="{% url 'contact' %}">Contact</a></li>-->
+                <!--Added the IDE page. See views.py & urls.py login submit to take us here KP-->
+                <li><a  href="{% url 'IDE' %}">IDE</a></li>
+                <li><a  href="{% url 'login' %}">login</a></li>
+                <!--if logged in show IDE menu buttons top left KP-->
                     
             </ul>              
-            {% include 'app/loginpartial.html' %}
+            <!--{% include 'app/loginpartial.html' %}-->
         </div>
     </div>
 
