--- a/PTP/app/templates/app/IDE.html
+++ b/PTP/app/templates/app/IDE.html
@@ -2,8 +2,27 @@
 
 {% block content %}
 
-    <!--Skulpt-->
-        <script type="text/javascript"> 
+<div id="wrapper" class="active">
+<!--new sidebar-->
+<!-- Sidebar -->
+<div id="sidebar-wrapper">
+    <ul id="sidebar_menu" class="sidebar-nav">
+        <li class="sidebar-brand"><a id="menu-toggle" href="#">Menu<span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a></li>
+    </ul>
+    <ul class="sidebar-nav" id="sidebar">     
+        <li><a>Link1<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+        <li><a>link2<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+    </ul>
+</div> 
+
+
+      <!-- Page content -->
+      <div id="page-content-wrapper">
+        <!-- Keep all page content within the page-content inset div! -->
+        <div class="page-content inset">
+
+<!--Skulpt-->
+<script type="text/javascript"> 
 // output functions are configurable.  This one just appends some text
 // to a pre element.
 function outf(text) { 
@@ -55,7 +74,9 @@ print "Hello World"
 <!-- If you want turtle graphics include a canvas -->
 <div id="mycanvas"></div> 
 
-
+</div> 
+</div> 
+</div> 
 
 
 {% endblock %}
