--- a/PTP/app/templates/app/layout.html
+++ b/PTP/app/templates/app/layout.html
@@ -21,6 +21,11 @@
     <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script> 
     <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script> 
 
+    <!--new sidebar-->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 </head>
 
 <body>
@@ -49,18 +54,24 @@
         </div>
     </div>
 
-    <div>
-{% block content %}{% endblock %}
-        <hr/>
+    <!--<div id="kellon" style="width:100%; height:100%;">-->
+{% block content %}
+    <!--</div>-->
+
+    {% endblock %}
+        
         <!--<footer>
             <p>&copy; {{ year }} - My Django Application</p>
         </footer>-->
-    </div>
 
 
 
-
-
+    <script type="text/javascript"> 
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("active");
+        });
+    </script> 
 
 {% block scripts %}{% endblock %}
 
