--- a/PTP/app/static/app/content/site.css
+++ b/PTP/app/static/app/content/site.css
@@ -345,7 +345,7 @@ input[type="checkbox"].input-validation-error {
 }
 
 /* ---------------------------------------------------
-    Cutsom Skulpt CSS
+    Cutsom Skulpt IDE CSS
 ----------------------------------------------------- */
 
 
@@ -358,62 +358,17 @@ div #mycanvas {
     background-color: white;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    /*#sidebar {
-    width: 250px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    z-index: 999;
-    background: #7386D5;
-    color: #fff;
-    transition: all 0.3s;
-}
-
-#sidebar.active {
-    margin-left: -250px;
-}
-
-.wrapper {
+.IDErow {
     display: flex;
-    width: 100%;
+}
+.IDEcol {
+    flex: 50%;
+    padding: 1px;
+    height: 600px;
 }
 
-a[data-toggle="collapse"] {
-    position: relative;
-}
 
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-}
 
-@media (max-width: 768px) {
-    #sidebar {
-        margin-left: -250px;
-    }
 
-    #sidebar.active {
-        margin-left: 0;
-    }
-}*/
+
+
