--- a/PTP/app/templates/app/IDE.html
+++ b/PTP/app/templates/app/IDE.html
@@ -59,21 +59,20 @@ function runit() {
 } 
 </script> 
 
-<h3>Try This</h3> 
-<form> 
-<textarea id="yourcode" cols="40" rows="10" style="resize: both;">import turtle
-
-t = turtle.Turtle()
-t.forward(100)
-
+<div class="IDErow">
+<div class="IDEcol">
+<form style="flex: 100%; height: 600px;">
+<div><button type="button" onclick="runit()">Run</button></div>
+<textarea id="yourcode" style="flex: 100%; height: 600px;" >
 print "Hello World" 
 </textarea><br /> 
-<button type="button" onclick="runit()">Run</button> 
-</form> 
-<pre id="output" ></pre> 
-<!-- If you want turtle graphics include a canvas -->
-<div id="mycanvas"></div> 
-
+</form>
+</div>
+<div class="IDEcol">
+    <div><button type="button" onclick="">Test</button></div>
+<pre id="output" style="flex: 100%; height: 600px;"></pre> 
+</div>
+</div>
 </div> 
 </div> 
 </div> 
