--- a/PTP/app/static/app/content/bootstrap.css
+++ b/PTP/app/static/app/content/bootstrap.css
@@ -732,10 +732,10 @@ code {
         margin: 0 0 10px;
         font-size: 13px;
         line-height: 1.428571429;
-        color: #333333;
+        color: white;
         word-break: break-all;
         word-wrap: break-word;
-        background-color: #f5f5f5;
+        background-color: black;
         border: 1px solid #cccccc;
         border-radius: 4px;
         /*width: 600px;
