--- a/PTP/app/static/app/content/site.css
+++ b/PTP/app/static/app/content/site.css
@@ -167,6 +167,7 @@ input[type="checkbox"].input-validation-error {
 
 #wrapper {
     background: #FFF;
+    background: inherit;
 }
 
 /*********************************************************************************/
@@ -181,10 +182,6 @@ input[type="checkbox"].input-validation-error {
     position: relative;
     padding: 3em 0em;
 }
-
-
-
-
 
 /*********************************************************************************/
 /* sidebar - tutorial                                                                  */
@@ -327,6 +324,7 @@ input[type="checkbox"].input-validation-error {
     #wrapper {
         padding-left: 70px;
         transition: all .4s ease 0s;
+        background-color: inherit;
     }
 
     #sidebar-wrapper {
@@ -350,8 +348,8 @@ input[type="checkbox"].input-validation-error {
 
 
 div #mycanvas {
-    width: 600px;
-    height: 500px;
+    flex: 50%;
+    height: 100%;
     border: 15px solid green;
     padding: 50px;
     margin: 20px;
@@ -360,11 +358,12 @@ div #mycanvas {
 
 .IDErow {
     display: flex;
+    height: 100%;
 }
 .IDEcol {
     flex: 50%;
     padding: 1px;
-    height: 600px;
+    height: 100%;
 }
 
 
