--- a/PTP/app/templates/app/layout.html
+++ b/PTP/app/templates/app/layout.html
@@ -16,12 +16,16 @@
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
       
-        <!--skulpt-->
+    <!--skulpt http://skulpt.org/ -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script> 
     <script src="http://www.skulpt.org/js/skulpt.min.js" type="text/javascript"></script> 
     <script src="http://www.skulpt.org/js/skulpt-stdlib.js" type="text/javascript"></script> 
 
-
+    <!--codemirror https://codemirror.net/doc/manual.html#modloader -->
+    <script src="{% static 'app/scripts/codemirror.js' %}"></script>
+    <script src="{% static 'app/scripts/javascript.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/codemirror.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/theme/3024-night.css' %}" />
 
 </head>
 
@@ -51,24 +55,7 @@
         </div>
     </div>
 
-    <!--<div id="kellon" style="width:100%; height:100%;">-->
-{% block content %}
-    <!--</div>-->
-
-    {% endblock %}
-        
-        <!--<footer>
-            <p>&copy; {{ year }} - My Django Application</p>
-        </footer>-->
-
-
-
-    <script type="text/javascript"> 
-        $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("active");
-        });
-    </script> 
+{% block content %}{% endblock %}
 
 {% block scripts %}{% endblock %}
 
